Documentation and POM updates